[package]
name = "cross-udev-hwdb"
version = "0.1.0"
edition = "2021"

[dependencies]
udev = { version = "0.8.0", features = ["hwdb"] }

[patch.crates-io]
libudev-sys = { git = "https://github.com/Emilgardis/libudev-sys", branch = "fix-cross-compilation" }

[target.x86_64-unknown-linux-gnu]
linker = "cc"

[package.metadata.cross.build]
pre-build = ["dpkg --add-architecture $CROSS_DEB_ARCH && apt-get update && apt-get install --assume-yes libusb-1.0-0-dev:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH udev:$CROSS_DEB_ARCH"]
